--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,10 @@
+:root {
+    --main-bg-color: #141922;
+    --toolbar-bg-color: #282828;
+    --header-bg-color: black;
+}
+
+
 html {
     font-family: 'Signika', sans-serif;
     color: white;
