--- a/css/app.css
+++ b/css/app.css
@@ -39,10 +39,16 @@ body {
     background-color: var(--main-bg-color);
     flex-grow: 1;
     flex-basis: 100%;
+    display: flex;
 }
 
 .toolbar {
     background-color: var(--toolbar-bg-color);
     min-width: 1200px;
     min-height: 80px;
+}
+
+.display__header {
+    min-width: 120px;
+    background-color: var(--header-bg-color);    
 }
