--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,6 @@
 html {
     font-family: 'Signika', sans-serif;
+    color: white;
 }
 
 :root {
@@ -16,6 +17,12 @@ ul, ol, menu {
 
 img {
     max-width: 100%;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    color: currentColor;
 }
 
 a {
@@ -116,16 +123,118 @@ body {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     font-weight: 700;
 }
 
 .nav-button {
     color: var(--grey);
+    position: relative;
+    transition: color 200ms ease-in-out;
 }
 
 .nav-button img {
     opacity: 0.6;
-    width: 1.75rem;  
+    width: 1.75rem; 
+    transition: opacity 200ms ease-in-out; 
 }
+
+.nav-button.active::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 3px;
+    background-color: var(--green);
+}
+
+.nav-button:hover img, .nav-button.active img {
+    opacity: 1;
+}
+
+.nav-button:hover, .nav-button.active {
+    color: white;
+}
+
+.playlist-wrapper {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+}
+
+.playlist-title {
+    text-transform: uppercase;
+    margin-bottom: 0.75rem;
+}
+
+.playlist-button {
+    display: flex;
+    gap: 0.65rem;
+    align-items: center;
+    font-weight: 700;
+    color: var(--grey);
+    transition: color 200ms ease-in-out;
+    cursor: pointer ;
+}
+
+.playlist-button:hover {
+    color: white;
+}
+
+.playlist-button i {
+    font-size: 2.25rem;
+}
+
+.playlist {
+    color: var(--grey);
+}
+
+.playlist_list {
+    flex-grow: 1;
+}
+
+.playlist a {
+    display: block;
+    line-height: 2rem;
+    font-size: 0.875rem;
+    font-weight: 700;
+    transition: color 200ms ease-in-out;
+}
+
+.playlist .list-item:hover {
+    color: white;
+}
+
+.install, .profile {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    font-weight: 700;
+}
+
+.install-arrow {
+    height: 1.25rem;
+    width: 1.25rem;
+}
+
+.install {
+    border-bottom: 1px solid white;
+    padding: 0.5rem 0;
+    width: 100%;
+    color: var(--grey);
+}
+
+.profile {
+    padding: 0.875rem 0;
+}
+
+.profile-pic {
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 50%;
+    background-color: var(--grey);
+    overflow: hidden;
+}
+
